--- a/internal/server/ui/components/calendar/day.templ
+++ b/internal/server/ui/components/calendar/day.templ
@@ -5,13 +5,10 @@ import (
 	"time"
 )
 
-const defaultDayClass = "h-fit border align-top"
-const invalidDayClass = "text-gray-400"
-
 templ day(renderDay time.Time, dayTitle string, outsideOfMonth bool, events calendar.EventMap) {
-	{{ renderClass := defaultDayClass }}
+	{{ renderClass := "calendar-day" }}
 	if outsideOfMonth {
-		{{ renderClass += (" " + invalidDayClass) }}
+		{{ renderClass += " calendar-day--outside" }}
 	}
 	<td
 		class={ renderClass }
@@ -20,31 +17,15 @@ templ day(renderDay time.Time, dayTitle string, outsideOfMonth bool, events cale
 		data-day={ renderDay.Day() }
 	>
 		{{ dayEvents, exists := events[renderDay.Day()] }}
-		<div
-			class="flex w-full h-full flex-col"
-		>
+		<div class="calendar-day-content" hx-on:click="newCalendarEvent(event)">
 			if !exists || len(dayEvents) == 0 {
-				<div
-					class="p-1 min-h-24 h-full cursor-pointer"
-					hx-on:click="newCalendarEvent(event)"
-				>
-					<div class="text-sm font-semibold mb-1">{ dayTitle }</div>
-					<div class="text-xs text-gray-500">No Events</div>
-				</div>
+				<div class="calendar-day-title">{ dayTitle }</div>
+				<div class="calendar-day-empty">No Events</div>
 			} else {
-				<div class="min-h-24 pt-1 pl-1">
-					<div
-						class="cursor-pointer text-sm font-semibold"
-						hx-on:click="newCalendarEvent(event)"
-					>{ dayTitle }</div>
-					for _, event := range dayEvents {
-						@dayEvent(*event, outsideOfMonth)
-					}
-				</div>
-				<div
-					class="cursor-pointer flex-grow"
-					hx-on:click="newCalendarEvent(event)"
-				></div>
+				<div class="calendar-day-title">{ dayTitle }</div>
+				for _, event := range dayEvents {
+					@dayEvent(*event, outsideOfMonth)
+				}
 			}
 		</div>
 	</td>
