--- a/internal/server/ui/components/icons/archive/component.templ
+++ b/internal/server/ui/components/icons/archive/component.templ
@@ -2,7 +2,7 @@ package archive
 
 templ Component() {
 	<svg
-		class="w-5 h-5 text-grey-500 mr-3"
+		class="icon icon--base icon--file"
 		aria-hidden="true"
 		xmlns="http://www.w3.org/2000/svg"
 		width="24"
