--- a/internal/server/ui/components/icons/folder/component.templ
+++ b/internal/server/ui/components/icons/folder/component.templ
@@ -2,7 +2,7 @@ package folder
 
 templ Component() {
 	<svg
-		class="w-5 h-5 text-grey-500 mr-3"
+		class="icon icon--base icon--folder"
 		fill="none"
 		stroke="currentColor"
 		stroke-width="2"
