--- a/internal/server/ui/components/icons/trash/component.templ
+++ b/internal/server/ui/components/icons/trash/component.templ
@@ -3,7 +3,7 @@ package trash
 templ Component() {
 	<svg
 		xmlns="http://www.w3.org/2000/svg"
-		class="inline w-6 h-6"
+		class="icon icon--lg"
 		viewBox="0 0 24 24"
 		fill="none"
 		stroke="currentColor"
