--- a/internal/server/ui/components/file_explorer/file_operations/component.templ
+++ b/internal/server/ui/components/file_explorer/file_operations/component.templ
@@ -4,14 +4,14 @@ import "autobutler/internal/server/ui/types"
 
 templ Component(pageState types.PageState) {
 	<div>
-		<div class="flex space-x-1">
+		<div class="file-operations">
 			@upload(pageState)
 			@download(pageState)
 			@delete(pageState)
 		</div>
 		<progress
 			id="file-upload-progress"
-			class="htmx-indicator "
+			class="file-upload-indicator"
 			value="0"
 			max="100"
 		></progress>
