--- a/internal/server/ui/components/file_explorer/file_operations/delete.templ
+++ b/internal/server/ui/components/file_explorer/file_operations/delete.templ
@@ -11,7 +11,7 @@ templ delete(pageState types.PageState) {
 		id="file-delete-button"
 		disabled
 		type="button"
-		class="disabled p-2 rounded hover:bg-red-800 text-gray-600 hover:text-white disabled:bg-gray-800 disabled:cursor-not-allowed disabled:hover:text-gray-600"
+		class="btn btn--icon btn--disabled"
 		title="Delete selected files"
 		hx-trigger="click"
 		hx-delete="/api/v1/files"
