--- a/internal/server/ui/components/gradient_overlays/component.templ
+++ b/internal/server/ui/components/gradient_overlays/component.templ
@@ -1,12 +1,8 @@
 package gradient_overlays
 
 templ Component() {
-	<div class="absolute inset-0 -z-10">
-		<div
-			class="absolute top-0 left-0 w-1/3 h-1/3 bg-blue-500/10 rounded-full blur-3xl"
-		></div>
-		<div
-			class="absolute bottom-0 right-0 w-1/3 h-1/3 bg-purple-500/10 rounded-full blur-3xl"
-		></div>
+	<div class="gradient-overlays">
+		<div class="gradient-overlay gradient-overlay--top"></div>
+		<div class="gradient-overlay gradient-overlay--bottom"></div>
 	</div>
 }
