--- a/internal/server/ui/components/hero/component.templ
+++ b/internal/server/ui/components/hero/component.templ
@@ -1,8 +1,8 @@
 package hero
 
 templ Component() {
-	<div class="flex flex-col items-center justify-center p-8">
-		<div class="text-center max-w-3xl space-y-8">
+	<div class="hero">
+		<div class="hero-content">
 			@icon()
 			@ctaButton()
 		</div>
