--- a/internal/server/ui/components/icons/sort_arrows/component.templ
+++ b/internal/server/ui/components/icons/sort_arrows/component.templ
@@ -1,7 +1,7 @@
 package sort_arrows
 
 templ Component() {
-	<svg class="w-3 h-3 text-gray-600 dark:text-gray-400" fill="currentColor" viewBox="0 0 24 24">
+	<svg class="icon icon--sm icon--sort" fill="currentColor" viewBox="0 0 24 24">
 		<path d="M7 8l5-5 5 5z"></path>
 		<path d="M7 16l5 5 5-5z"></path>
 	</svg>
