--- a/internal/server/ui/components/icons/sort_folder/component.templ
+++ b/internal/server/ui/components/icons/sort_folder/component.templ
@@ -1,7 +1,7 @@
 package sort_folder
 
 templ Component(id string) {
-	<svg id={ id } class="w-3 h-3 text-yellow-600 dark:text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+	<svg id={ id } class="icon icon--sm icon--sort-folder" fill="currentColor" viewBox="0 0 20 20">
 		<path d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"></path>
 	</svg>
 }
