--- a/internal/server/ui/components/file_explorer/view_content.templ
+++ b/internal/server/ui/components/file_explorer/view_content.templ
@@ -10,15 +10,20 @@ import (
 )
 
 templ ViewContent(pageState types.PageState, files []fs.FileInfo, view string) {
-	<div id="file-explorer-view-content">
-		if len(files) == 0 {
-			<span class="file-explorer-empty">No files found in { filepath.Join(util.GetFilesDir(), pageState.RootDir) }</span>
+	if len(files) == 0 {
+		<span class="file-explorer-empty">No files found in { filepath.Join(util.GetFilesDir(), pageState.RootDir) }</span>
+	} else {
+		if view == "column" {
+			@column_view.Component(pageState, files)
 		} else {
-			if view == "column" {
-				@column_view.Component(pageState, files)
-			} else {
-				@list_view.Component(pageState, files)
-			}
+			@list_view.Component(pageState, files)
 		}
-	</div>
+	}
+}
+
+// ViewContentWithBreadcrumb is used for HTMX requests that need to update the breadcrumb via OOB swap
+templ ViewContentWithBreadcrumb(pageState types.PageState, files []fs.FileInfo, view string) {
+	@ViewContent(pageState, files, view)
+	// Out-of-band swap to update breadcrumb
+	@BreadcrumbOOB(pageState, view)
 }
