feat: styling update

--- a/internal/server/public/styles/site.css
+++ b/internal/server/public/styles/site.css
@@ -7,6 +7,7 @@
 @import url('buttons.css');
 @import url('icons.css');
 @import url('hero.css');
+@import url('landing.css');
 @import url('file-explorer.css');
 @import url('calendar.css');
 @import url('photos.css');
