--- a/internal/server/ui/components/body/component.templ
+++ b/internal/server/ui/components/body/component.templ
@@ -3,7 +3,7 @@ package body
 import (
 	"autobutler/internal/server/ui/components/footer"
 	"autobutler/internal/server/ui/components/gradient_overlays"
-	"autobutler/internal/server/ui/components/topnav"
+	"autobutler/internal/server/ui/components/landing_nav"
 	"autobutler/internal/server/ui/types"
 )
 
@@ -12,7 +12,7 @@ templ Component(pageState types.PageState) {
 		<main class="site-main">
 			@gradient_overlays.Component()
 			<div class="site-fullscreen-col">
-				@topnav.Component(pageState)
+				@landing_nav.Component()
 				{ children... }
 				@footer.Component()
 			</div>
